--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,10 @@
 }
 
 body {
-  /* background: linear-gradient(
+  background: linear-gradient(
     0deg,
-    rgba(34, 46, 80, 1) 0%,
-    rgba(45, 114, 143, 1) 100%
-  ); */
-  background: #2d728f;
+    #222e50 0%,
+    #2d728f 100%
+  );
+  /* background: #2d728f; */
 }
