--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,6 @@
 }
 
 body {
-  background: linear-gradient(
-    0deg,
-    #222e50 0%,
-    #2d728f 100%
-  );
+  background: linear-gradient(0deg, #273868 0%, #2e7897 100%);
   /* background: #2d728f; */
 }
